# boi-image-matcher-linux

./: .gitignore  BOI-Win32-GPU.cpp  BOIImageMatcherConfig.h  BOIImageMatcherConfig.h.in  CMakeLists.txt  Matcher.cpp  Matcher.h  ReadMe.txt  base64.cpp  boi-image-matcher.cpp  dir.cpp  dir.h  dirent.h  featuredimg.cpp  featuredimg.h  train.cpp  train.h
